--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     <label for="resName-en">Reservation Name *</label>
     <input type="text" id="resName-en" name="reservation_name" required autocomplete="name" />
 
-    <label for="people-en">People *</label>
+    <label for="people-en">People 6 max *</label>
     <input type="number" id="people-en" name="people_amount" min="1" max="6" value="1" required />
 
     <label for="date-en">Date *</label>
@@ -234,7 +234,7 @@
     <label for="resName-lt">Rezervacijos vardas *</label>
     <input type="text" id="resName-lt" name="reservation_name" required autocomplete="name" />
 
-    <label for="people-lt">Žmonių kiekis *</label>
+    <label for="people-lt">Žmonių kiekis 6 max *</label>
     <input type="number" id="people-lt" name="people_amount" min="1" max="6" value="1" required />
 
     <label for="date-lt">Data *</label>
@@ -246,7 +246,7 @@
     <label for="email-lt">El. paštas *</label>
     <input type="email" id="email-lt" name="email" autocomplete="email" required />
 
-    <label>Maisto pasirinkima</label>
+    <label>Maisto pasirinkimas</label>
     <div id="food-list-lt"></div>
     <button type="button" id="add-food-btn-lt">+ Pridėti</button>
 
